--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Folders #
+######################
+/dist/
+/docs/
+/node_modules/
+/vendor/
+
+# OS generated files #
+######################
 .DS_Store
-.idea
-.vscode
+.DS_Store?
+._*
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
